@@ -9,6 +9,9 @@ Fixes to checkIdl task in PegausPlugin.  Some small clean-up in compatibility ta
 Only initialize a single checker class rather than one per pair of files, and don't
 bother setting resolver paths when checking snapshots of file counts.
 
+(RB=223135)
+Fix a bug in R2 that a pooled channel can be disposed twice.
+
 1.9.36
 ------
 (RB=220182)
